--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   width: 100%;
   max-width: 500px;
   margin: 50px auto;
@@ -8,12 +8,12 @@
   background: #fff;
   border-radius: 3px;
 }
-.main h1{
+.main h1 {
   font-size: 20px;
   text-align: center;
 }
 
-.form{
+.form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,7 @@
   width: 100%;
 }
 
-.form input[type="text"]{
+.form input[type='text'] {
   height: 40px;
   width: 100%;
   max-width: 300px;
@@ -30,7 +30,7 @@
   border: 1px solid #ccc;
 }
 
-.form button{
+.form button {
   height: 40px;
   width: 100%;
   max-width: 100px;
@@ -42,13 +42,13 @@
   background-color: rgba(249, 72, 72, 0.97);
   color: #fff;
 }
-.tarefas{
+.tarefas {
   display: flex;
   margin-top: 30px;
   flex-direction: column;
 }
 
-.tarefas li{
+.tarefas li {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,21 +56,23 @@
   list-style: none;
 }
 
-.tarefas li .edit{
+.tarefas li .edit {
   color: rgb(36, 156, 221);
   margin-right: 10px;
 }
-.tarefas li .delete{
+.tarefas li .delete {
   color: rgb(221, 36, 36);
 }
-.tarefas li:hover{
+.tarefas li:hover {
   background-color: rgb(36, 156, 221);
   transition: all 600ms;
 }
-.tarefas li .edit, .tarefas li .delete{
+.tarefas li .edit,
+.tarefas li .delete {
   cursor: pointer;
 }
-.tarefas li:hover .edit, .tarefas li:hover .delete{
+.tarefas li:hover .edit,
+.tarefas li:hover .delete {
   transition: all 600ms;
   color: #333;
 }
